# imp

./: .gitignore  MEDIAPIPE_TEST.md  README.md  architecture.md  attention_system.py  exo-archi.md  main.py  multimodal_system.py  pyproject.toml  requirements.txt  requirements_mediapipe.txt  t1.py  test_analyzer.py  user_analytics.json
analyzers/: audio_analyzer.py  emotion_fusion.py  video_analyzer.py
static/: analytics.css  analytics.js  attention-adapter.css  attention-adapter.js  multimodal-capture.js  playlist-menu.css  script.js  style.css  test-analyzers.js  theme-engine.js  theme-selector.css  themes.css  widget.css  widgets.js
templates/: index.html  test_analyzers.html
