[project]
name = "assignement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.96",
    "flask>=3.1.2",
    "flask-socketio>=5.3.0",
    "librosa>=0.10.2",
    "llvmlite>=0.42.0",
    "mediapipe>=0.10.9",
    "mutagen>=1.47.0",
    "numba>=0.59.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.9.0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.11.0",
    "scikit-learn>=1.3.0",
    "soundfile>=0.12.1",
    "tensorflow>=2.15.0",
    "tf-keras>=2.18.0",
]
